# topcoat

./: .editorconfig  .gitignore  .gitmodules  LICENSE  Makefile  README.md  config_template.yaml  go.mod  go.sum  main.go  n256.txt  n512.txt  pyproject.toml  temp_measurements.txt
config/: config.go  params-512.yaml  params.yaml
examples/measure/: main.go
examples/run_locally/: main.go
operations/: common.go  keygen.go  sign.go  verify.go
src/: determine_ideal_theta.py  module-info.java  run_cli.py  run_locally.py
src/crypto/: Dilizium.java  KeyGen.java  LeftOver.java  Params.java  Poly.java  PolyVector.java  Utils.java
src/crypto/comm/: CommUtils.java  Commitment.java
src/interfaces/: DiliziumInterfacePK.java  DiliziumInterfaceSK.java  DiliziumPrivateKey.java  DiliziumPublicKey.java  DiliziumTotalInterfacePK.java  DiliziumTotalInterfaceSK.java  DiliziumTotalPrivateKey.java  DiliziumTotalPublicKey.java
src/offline/: Main.java  TestAfter.java  TestBrno.java
src/online/: Client.java  Server.java
src/other/: Dilithium.java  PackingUtils.java  Poly.java  PolyVec.java  Utils.java
src/topcoat/: cli.py  keygen.py  params.py  sign.py  verify.py
src/topcoat/helpers/: commitment.py  communication.py  dataclasses.py  exception.py  hashes.py  hints.py  logger.py  modules.py  ntt_helper.py  polynomials.py  polyutils.py  utils.py
utils/: commitments.go  comms.go  hashes.go  hint.go  structs.go
